--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,25 @@
 version: '3.8'
 
 services:
+
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
+    image: nextjs-jwt-auth-app:latest
+    container_name: nextjs-app
+    restart: unless-stopped
     ports:
       - "3000:3000"
+    # Load environment variables from .env file (NOT copied into image)
+    env_file:
+      - .env
     environment:
-      - NODE_ENV=development
-      - DATABASE_URL=mongodb://mongodb:27017/nextjs-auth?replicaSet=rs0
-      - JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-      - NEXTAUTH_SECRET=your-nextauth-secret-change-this-in-production
-    depends_on:
-      - mongodb
-    volumes:
-      - .:/app
-      - /app/node_modules
-      - /app/.next
+      # Override specific variables if needed
+      DATABASE_URL: "mongodb+srv://akash:DVJ4k8fSb0qey3oe@akash-play.zay1bq8.mongodb.net/devops-assignment"
+      NODE_ENV: production
+    networks:
+      - app-network
 
-  mongodb:
-    image: mongo:7
-    ports:
-      - "27017:27017"
-    environment:
-      - MONGO_INITDB_DATABASE=nextjs-auth
-    command: mongod --replSet rs0
-    volumes:
-      - mongodb_data:/data/db
 
-volumes:
-  mongodb_data:
+networks:
+  app-network:
+    driver: bridge
+
