--- a/env.example
+++ b/env.example
@@ -1,14 +1,20 @@
 # See https://nextjs.org/docs/basic-features/environment-variables
-# Database
-DATABASE_URL="mongodb://localhost:27017/nextjs-auth"
+# Database (use mongodb:// for local, mongodb+srv:// for Atlas)
+DATABASE_URL=mongodb://localhost:27017/nextjs-auth
+
+# For Docker, use host.docker.internal to access host machine:
+# DATABASE_URL=mongodb://host.docker.internal:27017/nextjs-auth
+
+# For MongoDB Atlas (cloud):
+# DATABASE_URL=mongodb+srv://username:password@cluster.mongodb.net/database
 
 # JWT Secret
-JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 # NextAuth
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-nextauth-secret-change-this-in-production"
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your-nextauth-secret-change-this-in-production
 
 # App Configuration
-NODE_ENV="development"
+NODE_ENV=development
 PORT=3000
