--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -5,6 +5,16 @@ metadata:
   namespace: da
 type: Opaque
 stringData:
-  database-url: "mongodb+srv://akash:DVJ4k8fSb0qey3oe@akash-play.zay1bq8.mongodb.net/devops-assignment"
-  jwt-secret: "abcdefgh"
-  nextauth-secret: "abcdefgh"
+  # MongoDB Atlas connection
+  DATABASE_URL: "mongodb+srv://akash:DVJ4k8fSb0qey3oe@akash-play.zay1bq8.mongodb.net/devops-assignment"
+  
+  # JWT & Auth secrets
+  JWT_SECRET: "abcdefgh"
+  NEXTAUTH_SECRET: "abcdefgh"
+  
+  # NextAuth URL (use ingress hostname or external URL)
+  NEXTAUTH_URL: "http://nextjs-app.local"
+  
+  # App configuration
+  NODE_ENV: "production"
+  PORT: "3000"
