--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -6,9 +6,9 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
-  - host: nextjs-app.local
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
